--- a/Articles.html
+++ b/Articles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article</title>
-    <link rel="stylesheet" href="Article.css">
+    <link rel="stylesheet" href="Articles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -15,7 +15,7 @@
                 <a style="font-size: 40px;padding-left: 70px " href="#" > <img src="images/p1.png" height="70px" width="180px" > </a>
                 <a style="font-size: 20px;padding-left: 500px;"  href="Home.html" >Home</a>
                 <a style="font-size: 20px;padding-left: 30px;" href="About.html" >About</a>
-                <a style="font-size: 20px;padding-left: 30px;" href="class.html" >Clasess</a>
+                <a style="font-size: 20px;padding-left: 30px;" href="clas.html" >Clasess</a>
                 <a style="font-size: 20px;padding-left: 30px;" href="Article.html" >Articles</a> 
                 <a style="font-size: 20px;padding-left: 30px;" href="contact.html" >Contact</a> 
                </ul>
